[build-system]
requires = ["setuptools>=61"]
build-backend = "setuptools.build_meta"

[project]
name = "rs-data-process"
version = "0.1.0"
description = "GeoTIFF tiling and stitching utilities for remote sensing imagery."
readme = "README.md"
requires-python = ">=3.8"
license = {text = "MIT"}
authors = [
  {name = "gy93-rs"}
]
dependencies = [
  "numpy>=1.23",
  "rasterio>=1.3",
  "opencv-python-headless>=4.8"
]

[project.scripts]
data-process = "data_process.cli:main"

[tool.setuptools.packages.find]
include = ["data_process*"]
